k8s-security-framework/policies/image-security/KSP-IMG-002/tests/exception-policy-for-specific-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: approved-registry-allowlist-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: approved-registry-allowlist
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name in ['ksp-img-002-exception', 'ksp-img-002-exception-secondary',
      'ksp-img-002-exception-tertiary'] && object.metadata.namespace == 'policy-test'
