k8s-security-framework/policies/image-security/KSP-IMG-002/tests/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-002-exception
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: docker.io/library/nginx:1.25
