k8s-security-framework/policies/image-security/KSP-IMG-002/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-002-exception
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: docker.io/library/nginx:1.25
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-002-exception-secondary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: docker.io/library/nginx:1.25
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-002-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: good
    image: registry.k8s.io/pause:3.10
  ephemeralContainers:
  - name: debugger
    image: docker.io/library/nginx:1.27
    command:
    - sh
