k8s-security-framework/policies/image-security/KSP-IMG-002/tests/negative-ephemeral-container-noncompliant-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-002-negative-ephemeral-image
  namespace: policy-test
spec:
  containers:
    - name: good
      image: registry.k8s.io/pause:3.10
  ephemeralContainers:
    - name: debugger
      image: docker.io/library/nginx:1.27
      command: ["sh"]
