k8s-security-framework/policies/image-security/KSP-IMG-002/tests/negative-init-container-noncompliant-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-002-negative-init-image
  namespace: policy-test
spec:
  containers:
    - name: good
      image: registry.k8s.io/pause:3.10
  initContainers:
    - name: init
      image: docker.io/library/nginx:1.27
