k8s-security-framework/policies/image-security/KSP-IMG-002/tests/negative-noncompliant-image-last.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-002-negative-image-last
  namespace: policy-test
spec:
  containers:
    - name: good
      image: registry.k8s.io/pause:3.10
    - name: bad
      image: docker.io/library/nginx:1.27
