k8s-security-framework/policies/image-security/KSP-IMG-002/tests/negative-unapproved-docker-hub-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: img-002-negative
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: docker.io/library/nginx:1.25
